# cau-notice-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: keepalive.txt
.github/workflows/: keepalive.yml  notify.yml
src/: bot_service.py  config.py  domain.py  main.py  notice_check.py  services.py  sources.py
tests/: conftest.py  test_bot_service.py  test_main.py  test_notice_check.py  test_services.py  test_sources.py
